Implement events to communicate between backand and frontend